2021-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

	* docs/.nojekyll: Moved

2021-10-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/pushes.R (pbPost): Suppress a warning from comparison in case of
	multiple emails (thanks Josh Ulrich for the heads-up)

2021-06-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugReports): Added to DESCRIPTION

2021-03-28  Dirk Eddelbuettel  <edd@debian.org>

	* docs/mkdmt-src/: Moved mkdocs-material input

2021-03-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.4

2021-02-28  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Updated http:// links to https://
	* DESCRIPTION: Idem
	* R/devices.R: Idem
	* R/pushes.R: Idem
	* man/pbGetDevices.Rd: Idem
	* man/pbPost.Rd: Idem
	* man/rpushbullet-package.Rd: Idem

	* .Rbuildignore: Add .nojekyll

2021-02-27  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Added run.sh from r-ci
	* .Rbuildignore: Added .github
	* .travis.yml: Minor edit

	* .rpushbullet.json.gpg: New gpg-encrypted tokenfile
	* .github/scripts/decrypt_tokenfile.sh: Added helper to decrypt
	* .github/workflows/ci.yaml: Use helper and token via secret

	* docs/: Added package website
	* docs-src/: Added package website inputs

	* README.md: Added badge and short paragraph linking to documentation

2020-06-14  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (sudo): Switch to 'bionic' and R 4.0.0; set
	TRAVIS_SECURE_ENV_VARS="true", condition coverage

2020-06-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* tests/simpleTests.R: Add tests for .checkReturnCode

2020-06-13  Thomas Shafer  <thomasjshafer@gmail.com>

	* R/init.R (.checkReturnCode): Refactored error code check

2020-04-11  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added 'last commit' badge, small edits
