@@ -7,7 +7,6 @@ on:
   pull_request:
 
 env:
-  USE_BSPM: "true"
   _R_CHECK_FORCE_SUGGESTS_: "false"
   # setting this one below in the steps did not work
   TOKENFILE_PASSWORD: ${{ secrets.TOKENFILE_PASSWORD }}
@@ -25,13 +24,13 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+      - name: Get Script
+        run: curl -OLs https://eddelbuettel.github.io/r-ci/run.sh && chmod 0755 run.sh
 
       - name: Bootstrap
-        run: |
-          curl -OLs https://eddelbuettel.github.io/r-ci/run.sh
-          chmod 0755 run.sh
-          ./run.sh bootstrap
+        run: ./run.sh bootstrap
 
       - name: Dependencies
         run: ./run.sh install_deps
